compilers/ID/cool/regression/BASE_semanttest/noselffeature.cl.stderr
./BASE_semanttest/noselffeature.cl:6: 'self' cannot be the name of an attribute.
Compilation halted due to static semantic errors.
