compilers/ID/cool/regression/BASE_semanttest/noselffeature.cl
class A is
  self() : Int is 1 end;
end;

class Main is 
  self: Int <- 0;
  main(): Object is 3 end;
end;
